--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.find.addExtraSpaceOnTop": false
+    "editor.find.addExtraSpaceOnTop": false,
+    "workbench.editor.enablePreview": false
 }
